--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/emoji-mart": "^3.0.9",
     "@types/react-redux": "^7.1.23",
     "@types/shortid": "0.0.29",
     "antd": "^4.19.3",
+    "emoji-mart": "^3.0.1",
     "npm": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-file-reader": "^1.1.4",
     "react-redux": "^7.2.6",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.0.0",
